# Qwen-Omni-Server

./: LICENSE  pyproject.toml
src/: client.py  serve.py
